# Tutorials

./: README.md
CUDA 编程入门/examples/: Makefile  asum.cu  mem-host.cu  vec_add.cu
CUDA编程入门/: README.md
CUDA编程入门/examples/: 04-mem-host.cu  06-1B-reduction-v1.cu  06-1B-reduction-v2.cu  06-1B-reduction.cu  06-reduction_1.cu  06-reduction_v1.cu  06-reduction_v2.cu  07-warp-activemask.cu  07-warp-bcast.cu  07-warp-reduce-v2.cu  07-warp-reduce.cu  07-warp-scan.cu  08-coalesced-bipart.cu  08-coalesced-label-part.cu  08-coalesced.cu  08-reduction-v1.cu  08-reduction-v2.cu  08-reduction-v3.cu  08-reduction-v4.cu  08-vec-add.cu  08-warp-bcast-v2.cu  08-warp-bcast.cu  1B-reduction.cu  Makefile  aux.h  mem.cu  reduction.cu  reduction_1.cu  reduction_2.cu  reduction_3.cu  reduction_aux.h  vec-add.cu  vec-dot.cu  vec_add.cu  vec_dot.cu
CUDA编程入门/slides/: .~lock.09-CUDA-performance.pdf#
GPU 计算: CUDA 编程入门/examples/: mem.cu
GPU 计算: CUDA\ 编程入门/: README.md
Linux-MacOS 项目管理/: README.md
Linux-MacOS 项目管理/autoconf/: Makefile.in  README.md  aclocal.m4
Linux-MacOS 项目管理/autoconf/include/: projmgmt.h
Linux-MacOS 项目管理/autoconf/src/: Makefile
Linux-MacOS 项目管理/makefile/: projmgmt.c  projmgmt.h
Linux-MacOS编程工具/: README.md
Linux-MacOS编程工具/autoconf/: configure.in
Linux-MacOS编程工具/autoconf/example/: exam.c
Linux-MacOS编程工具/autoconf/include/: config.h
Linux-MacOS编程工具/autoconf/utils/: makedeps
Linux-MacOS编程工具/clewn/: README.md
Linux-MacOS编程工具/examples/autoconf/: Makefile.inc  Makefile.inc.in  config.status  configure  configure.in
Linux-MacOS编程工具/examples/autoconf/example/: exam.c
Linux-MacOS编程工具/examples/autoconf/include/: api_ftn.h
Linux-MacOS编程工具/examples/autoconf/src/: Makefile.dep
Linux-MacOS编程工具/examples/gcc/: Makefile  main.c
Linux-MacOS编程工具/examples/makefile/: Makefile  add.c  exam  main.c
Linux-MacOS编程工具/gcc/: README.md
Linux-MacOS编程工具/gdb/: README.md
Linux-MacOS编程工具/screen/: screenrc
Linux-MacOS编程工具/valgrind/: README.md
Linux-MacOS编程工具/vim/: vimrc
Linux编程工具/examples/autoconf/: Makefile.inc.in
Linux编程工具/examples/autoconf/example/: Makefile
Linux编程工具/examples/autoconf/include/: utils.h
Linux编程工具/examples/autoconf/src/: api_ftn.f
Linux编程工具/examples/gcc/: main.c
Linux编程工具/examples/makefile/: add.h
Linux编程环境/: README.md
Linux编程环境/examples/autoconf/include/: Makefile  config.h  config.h.in
Linux编程环境/examples/autoconf/utils/: makedeps
Linux编程环境/examples/makefile/: main.c  utils.c  utils.h
MPI并行编程/: README.md
MPI并行编程/examples/: 03-hello-world.c  06-L2-norm.c  06-L2-norm2-allreduce.c  06-L2-norm2.c  06-comm.c  06-dot-product.c  06-env.c  06-sendrecv-deadlock-no-send.c  06-sendrecv-deadlock-wrong-tag.c  06-sendrecv.c  08-cancel.c  08-isend-irecv.c  08-isend-recv.c  08-per-isend-irecv.c  08-per-isend-recv.c  08-per-send-irecv.c  08-send-irecv.c  09-allgather.c  09-allgatherv.c  09-allreduce.c  09-alltoall.c  09-alltoallv.c  09-barrier-deadlock.c  09-barrier.c  09-bcast.c  09-gather.c  09-gatherv.c  09-reduce.c  09-scan.c  09-scatter.c  09-scatterv.c  10-contiguous.c  10-indexed.c  10-packed-demo1.c  10-packed-demo2.c  10-packed-demo3.c  10-packed-demo4.c  10-struct.c  10-vector.c  11-keyval.c  (+2 more)
OpenMP并行编程/: README.md
OpenMP并行编程/examples/: 04-hello-world-omp.c  04-vec-add.c  05-vec-add.c  06-1-hello-world-clause.c  06-1-hello-world-func.c  06-1-hello-world-mixed.c  06-2-hello-world.c  06-3-coding.c  06-3-hello-world.c  06-4-vec-add2.c  06-hello-world-clause.c  06-hello-world-mixed.c  06-vec-add.c  07-1-vec-add.c  07-2-hello.c  07-3-single.c  08-1-dot.c  08-2-self-def.c  08-dot.c  09-master-task.c  09-single-task.c  09-task.c  11-1-shared.c  11-2-private.c  11-2-shared.c  11-3-private.c  11-4-firstprivate.c  11-4-lastprivate.c  11-6-threadprivate.c  Makefile  README.md
OpenMP并行编程/slides/: 00-Content.pptx  01-1-CPU.pptx  01-2-System.pptx  01-3-Mem.pptx  01-4-NUMA.pptx  01-5-ParallelComputing.pptx  01-6-ParallelComputer.pptx  01-7-ParallelProg.pptx  02-1-WhatIsOpenMP.pptx  02-2-Term.pptx  02-3-MemModel.pptx  03-HowToWrite.pptx  04-HowToCompile.pptx  05-HowToRun.pptx  06-1-Parallel.pptx
OpenMP编程入门/examples/: 04-hello-world-omp.c  04-hello-world.c  Makefile
代数多重网格入门介绍/: README.md
代数多重网格入门介绍/slides/: amg-intro-1.pptx  amg-intro-10.pptx  amg-intro-12.pptx  amg-intro-13.pptx  amg-intro-2.pptx  amg-intro-3.pptx  amg-intro-4.pptx  amg-intro-5.pptx  amg-intro-6.pptx  amg-intro-7.pptx  amg-intro-8.pptx  amg-intro-9.pptx
并行计算编程模型/: README.md
